--- a/server/src/package.json
+++ b/server/src/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22"
   }
 }
- 
