--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "fa-icons": "^0.2.0",
     "framer-motion": "^10.12.22",
     "react": "^18.2.0",
