--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
     "fa-icons": "^0.2.0",
@@ -21,7 +22,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.13.0"
+    "react-id-swiper": "^4.0.0",
+    "react-router-dom": "^6.13.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
