--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.13.0",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.1.0"
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-hash-link": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
