--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.10.5",
     "fa-icons": "^0.2.0",
     "framer-motion": "^10.12.22",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
