--- a/server/src/package.json
+++ b/server/src/package.json
@@ -17,6 +17,7 @@
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
