--- a/server/src/package.json
+++ b/server/src/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
+    "uniqid": "^5.4.0",
     "uuid": "^9.0.0"
   }
 }
