--- a/server/src/package.json
+++ b/server/src/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
