--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
