--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.13.0",
     "react-router-hash-link": "^2.4.3",
     "swiper": "^10.1.0",
