--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.13",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "expo-updates": "~0.18.13"
+    "react-native-gesture-handler": "^2.13.2",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
