--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
