--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,6 @@ CLIENT_ID = '242291413413-qq5caaet14avftpvt5pvtvq641qcf1qk.apps.googleuserconten
 CLIENT_SECRET = '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'
 REDIRECT_URI = 'http://localhost:5173'
 REFRESH_TOKEN = '1//0h0eiPsnYNAYECgYIARAAGBESNwF-L9IrBmQSiwnqBIduQn5tKo6zNfz-0r03ugDfgf83mfxMSVMzUoLlXGA-4dCQq5yozep8I7w'
+EMAIL_USER = 'bairronline21@gmail.com'
 
 # chave jwt protegida aqui uhuhuhuhuhu
